# simpleweather

./: Cargo.toml  README.md
src/: cfg.rs  lib.rs  main.rs  openweather.rs  pretty_printer.rs
