[package]
name = "simpleweather"
version = "0.1.0"
authors = ["Konstantin Zhukov <moncruist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true


[dependencies]
rust-ini = "0.14"
reqwest = {version = "0.10", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}